# XString

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh  string.cpp  string.h  xstring.cpp  xstring.h
src/: xstring.cpp  xstring.h
src/testing/: main.cpp
testing/: main.cpp
